# station_remote_control

./: README.md
project/: .dockerignore  Dockerfile  docker-compose.yml
project/remotecontrol/: manage.py  pyproject.toml  pytest.ini
project/remotecontrol/api/: serializers.py  services.py  urls.py  views.py
project/remotecontrol/api/tests/: fixtures.py  test_views.py
project/remotecontrol/remotecontrol/: asgi.py  settings.py  urls.py  wsgi.py
project/remotecontrol/stations/: models.py
project/remotecontrol/stations/migrations/: 0001_initial.py  0002_alter_station_broken_data.py
